# argosy

./: .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  argosy.toml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_phase1.py  0003_phase2.py  0004_phase3.py  0005_phase4.py  0006_phase5.py  0007_phase6.py  0008_intake_session.py  0009_drop_orphan_user_context_id.py  0010_pension_snapshots.py  0011_rename_prices_cache_to_kv_cache.py  0012_investor_events.py  0013_pensions_to_dict_shape.py  0014_investor_events_dedup.py  0015_plan_versions_lifecycle.py  0016_plan_versions_distillate.py  0017_plan_versions_synthesis.py  0018_decision_runs_amendment.py  0019_user_files_catalog.py  0020_decision_phases.py  0021_household_expenses.py  0022_expense_amount_nis_nullable.py  0023_fx_rates.py  0024_expense_transaction_tags.py  0025_decision_phases_seq_unique.py  0026_agent_reports_api_telemetry.py  0027_agent_reports_sources_json.py  0028_agent_reports_run_correlation_id.py  0029_agent_reports_prompts.py  0030_portfolio_snapshots.py  0031_decision_phases_output_json.py  0033_decision_kind_expansion.py  0034_daily_briefs_runner.py  0035_fm_objection_translations.py  0036_fm_objection_user_state.py  0037_fleet_self_review_reports.py  0038_anomaly_reports.py  (+37 more)
argosy/: __init__.py  agent_settings.py  config.py  logging.py  secrets.py
scripts/: backup_to_sibling.ps1  smoke.ps1  smoke_routes.sh
tests/: conftest.py  expense_ground_truth.py  test_account_scoped_escalation.py  test_action_item_guidance.py  test_action_proposals_service.py  test_action_proposer.py  test_adapter_key_resolution.py  test_adapter_outcomes.py  test_adjudication_e2e.py  test_advisor_agent.py  test_advisor_amendment_route.py  test_advisor_amendment_types.py  test_advisor_image_attachments.py  test_advisor_route.py  test_advisor_turn_attachments.py  test_agent_activity_api.py  test_agent_report_model.py  test_agent_run_events.py  test_agent_settings_overrides.py  test_agent_tree_builder.py  test_allocation_agent.py  test_allocation_breakdown.py  test_allocation_engine.py  test_allocation_fact_sites.py  test_allocation_glidepath.py  test_allocation_plan.py  test_allocation_routes.py  test_allocation_tasks_route.py  test_alpha_report_analyst.py  test_alternatives_phase.py  test_alternatives_reviewers.py  test_alternatives_sourcer.py  test_alternatives_types.py  test_annual_loop.py  test_anomalies_route.py  test_anomaly_buckets_wired.py  test_anomaly_by_txn_route.py  test_anomaly_dismiss_route.py  test_anomaly_highlights_route.py  test_anomaly_migration_0045_0046_0047.py  (+457 more)
tmp_review/: ALTERNATIVES_SOURCING_HANDOVER.md  NEXT_SESSION_HANDOVER.txt  codex_engine_quick.py  codex_engine_sleeve_review.py  codex_engine_sleeve_review_r2.py  codex_engine_verdict_r4.txt  codex_isin_checksum_review.py  codex_isin_checksum_verdict.txt  codex_verify_instrument_review.py  codex_verify_instrument_review_r2.py  codex_verify_instrument_verdict.txt  codex_verify_instrument_verdict_r2.txt  demo_incremental.py  run_alternatives_phase_live.py
tools/: iterate_rewriter.py  iterate_synth_evidence.py  smoke_test_gate_against_v20.py
ui/: Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  vercel.json  vitest.config.ts
(+998 files in other folders)
