[project]
name = "argosy"
version = "0.1.0"
description = "Multi-agent financial advisor system (Phase 0 scaffold)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Argosy" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "structlog>=24.4.0",
    "keyring>=25.5.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "tomli; python_version < '3.11'",
    # Phase 1 additions
    "anthropic>=0.40.0",
    "typer>=0.12.5",
    "pyyaml>=6.0.2",
    # Phase 2 additions
    "croniter>=2.0.0",
    "yfinance>=0.2.40",
    "fredapi>=0.5.2",
    "finnhub-python>=2.4.20",
    "tzdata>=2024.2 ; sys_platform == 'win32'",
    # Phase 4 additions
    "ib_insync>=0.9.86",
    "aiosmtplib>=3.0.0",
    "cryptography>=47.0.0",
    "claude-agent-sdk>=0.1.72",
    "pypdf>=6.10.2",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["argosy"]

[project.scripts]
argosy = "argosy.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    "playwright>=1.59.0",
    "python-docx>=1.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "llm_eval: marks tests that call the live Anthropic API (deselect with -m 'not llm_eval')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
